# magick

./: .gitignore  .vimrc  CMakeLists.txt
jpg/: jpegslice.c  static_jpegslice
libjpeg-turbo-code2/: turbojpeg.c  turbojpeg.h
slice/: coders  coders.cpp  rendered  slice  slice.cpp  slicer
